// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EN] archive 1`] = `
<div
  class="archive"
>
  <div
    class="leftPanel"
  >
    <div
      class="archiveInfo"
    >
      <ufo-rocks_resource-icon
        cls="archiveIcon"
        ext="7z"
        mediatype="archive"
        size="m"
      />
      <div
        class="archiveInfoText"
      >
        <div
          class="title"
        >
          archive-1.7z
        </div>
        <div
          class="infoLine"
        >
          <span>
            Size:
          </span>
           
          <span>
            98 KB
          </span>
        </div>
        <div
          class="infoLine"
        >
          <span>
            Objects:
          </span>
           
          <span>
            5
          </span>
        </div>
      </div>
    </div>
    <div
      class="listing"
    >
      <div
        class="listingItem"
      >
        <span>
          Empty folder
        </span>
      </div>
    </div>
  </div>
  <div
    class="preview"
  >
    <div
      class="tip"
    >
      <span>
        Now you can view and
extract individual files from the archive
      </span>
    </div>
  </div>
</div>
`;

exports[`[RU] archive 1`] = `
<div
  class="archive"
>
  <div
    class="leftPanel"
  >
    <div
      class="archiveInfo"
    >
      <ufo-rocks_resource-icon
        cls="archiveIcon"
        ext="7z"
        mediatype="archive"
        size="m"
      />
      <div
        class="archiveInfoText"
      >
        <div
          class="title"
        >
          archive-1.7z
        </div>
        <div
          class="infoLine"
        >
          <span>
            Размер:
          </span>
           
          <span>
            98 КБ
          </span>
        </div>
        <div
          class="infoLine"
        >
          <span>
            Объектов:
          </span>
           
          <span>
            5
          </span>
        </div>
      </div>
    </div>
    <div
      class="listing"
    >
      <div
        class="listingItem"
      >
        <span>
          Пустая папка
        </span>
      </div>
    </div>
  </div>
  <div
    class="preview"
  >
    <div
      class="tip"
    >
      <span>
        Теперь можно просматривать
и извлекать отдельные файлы из архива
      </span>
    </div>
  </div>
</div>
`;

exports[`[TR] archive 1`] = `
<div
  class="archive"
>
  <div
    class="leftPanel"
  >
    <div
      class="archiveInfo"
    >
      <ufo-rocks_resource-icon
        cls="archiveIcon"
        ext="7z"
        mediatype="archive"
        size="m"
      />
      <div
        class="archiveInfoText"
      >
        <div
          class="title"
        >
          archive-1.7z
        </div>
        <div
          class="infoLine"
        >
          <span>
            Boyut:
          </span>
           
          <span>
            98 KB
          </span>
        </div>
        <div
          class="infoLine"
        >
          <span>
            Obje sayısı:
          </span>
           
          <span>
            5
          </span>
        </div>
      </div>
    </div>
    <div
      class="listing"
    >
      <div
        class="listingItem"
      >
        <span>
          Klasör boştur
        </span>
      </div>
    </div>
  </div>
  <div
    class="preview"
  >
    <div
      class="tip"
    >
      <span>
        Artık arşivdeki dosyaları tek tek görüntüleyebilir 
ve arşivden çıkarabilirsiniz
      </span>
    </div>
  </div>
</div>
`;

exports[`[UK] archive 1`] = `
<div
  class="archive"
>
  <div
    class="leftPanel"
  >
    <div
      class="archiveInfo"
    >
      <ufo-rocks_resource-icon
        cls="archiveIcon"
        ext="7z"
        mediatype="archive"
        size="m"
      />
      <div
        class="archiveInfoText"
      >
        <div
          class="title"
        >
          archive-1.7z
        </div>
        <div
          class="infoLine"
        >
          <span>
            Розмір:
          </span>
           
          <span>
            98 КБ
          </span>
        </div>
        <div
          class="infoLine"
        >
          <span>
            Об'єктів:
          </span>
           
          <span>
            5
          </span>
        </div>
      </div>
    </div>
    <div
      class="listing"
    >
      <div
        class="listingItem"
      >
        <span>
          Порожня папка
        </span>
      </div>
    </div>
  </div>
  <div
    class="preview"
  >
    <div
      class="tip"
    >
      <span>
        Тепер можна переглядати
і добувати окремі файли з архіву
      </span>
    </div>
  </div>
</div>
`;
